# obsidian-folder-opener

./: LICENSE  MANIFEST.in  README.md  build.bat  obsidian_pure_launcher.vbs  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: build-release.yml
src/: config_manager.py  installer.py  main.py
